--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Our Team</title>
 </head>
 <body>
+    <header class="d-flex justify-content-center align-items-center">
+        <h1 class="text-white fw-bold">Meet the <span class="text-uppercase">team</span></h1>
+    </header>
+    <main class="container">
+        <div class="row">
+            <div class="col-4 d-flex flex-wrap">
+                <div class="card w-100 mb-5">
+                    <div class="card-head">
+                        <!-- imame -->
+                    </div>
+                    <div class="card-body">
+                        <!-- role -->
+                        <!-- name and surname -->
+                        <!-- paragraph -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
