--- a/index.html
+++ b/index.html
@@ -14,18 +14,7 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="col-4 d-flex flex-wrap">
-                <div class="card w-100 mb-5">
-                    <div class="card-head">
-                        <!-- imame -->
-                    </div>
-                    <div class="card-body">
-                        <!-- role -->
-                        <!-- name and surname -->
-                        <!-- paragraph -->
-                    </div>
-                </div>
-            </div>
+           <!-- code javascript -->
         </div>
     </main>
     <script src="./js/script.js"></script>
