add-logo-and-description

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <header class="d-flex justify-content-center align-items-center">
-        <h1 class="text-white fw-bold">Meet the <span class="text-uppercase">team</span></h1>
+        <div class="box-logo">
+            <img src="./img/meet-our-team-2.png" alt="">
+        </div>
     </header>
     <main class="container">
+        <p class="text-center pt-4 fs-6">Welcome to <span class="p-title">"Meet our Team"</span> page! <br> In this section of our website, you'll have the opportunity to get to know the people behind our business and learn more about their skills, roles, and personalities.</p>
         <div class="row">
            <!-- code javascript -->
         </div>
