--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         </div>
     </header>
     <main class="container">
-        <p class="text-center pt-4 fs-6">Welcome to <span class="p-title">"Meet our Team"</span> page! <br> In this section of our website, you'll have the opportunity to get to know the people behind our business and learn more about their skills, roles, and personalities.</p>
+        <p class="text-center pt-4 fs-6 text-white">Welcome to <span class="p-title">"Meet our Team"</span> page! <br> In this section of our website, you'll have the opportunity to get to know the people behind our business and learn more about their skills, roles, and personalities.</p>
         <div class="row">
            <!-- code javascript -->
         </div>
     </main>
+    <!-- <img src="./img/Team.png" class="img-background"> -->
     <script src="./js/script.js"></script>
 </body>
 </html>
