--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Our Team</title>
 </head>
@@ -20,6 +21,11 @@
            <!-- code javascript -->
         </div>
     </main>
+    <footer>
+        <div class="copyright text-center">
+            <i class="fa-regular fa-copyright text-white"></i> <a href="https://github.com/nicolozibra1" class="text-white text-decoration-none"> 2023 Created with &hearts; by Nicolò Zibra</a>
+        </div>
+    </footer>
     <!-- <img src="./img/Team.png" class="img-background"> -->
     <script src="./js/script.js"></script>
 </body>
